--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# Node modules
 node_modules/
+
+# Environment variables
 .env
+
+# Logs
+logs/
+*.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Optional
+.DS_Store
+.vscode/
+*.local
+
+# OS
+Thumbs.db
